# Android_DawnWebGPU

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/dawnwebgpu/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  utils.cmake  webgpuRenderer.cpp  webgpuRenderer.h
app/src/main/cpp/webgpu/: FetchDawn.cmake  webgpu.cmake
app/src/main/java/com/example/dawnwebgpu/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dawnwebgpu/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
